# esp32-qmk-lucky65

./: README.md
firmware/esp32-qmk-lucky65/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/esp32-qmk-lucky65/main/hw/: hw.c  hw.h  hw_def.h
firmware/esp32-qmk-lucky65/main/hw/driver/: keys.c
firmware/esp32-qmk-lucky65/main/hw/driver/usb/usb_hid/: usbd_hid.c
firmware/lucky65-boot/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/lucky65-boot/main/: CMakeLists.txt
firmware/lucky65-boot/main/ap/: ap.cpp
firmware/lucky65-boot/main/hw/: hw.c  hw.h  hw_def.h
firmware/lucky65-boot/main/hw/driver/: adc.c  keys.c  led.c  reset.c
firmware/lucky65-boot/main/hw/driver/usb/: usb.c  usb.h
firmware/lucky65-boot/main/hw/driver/usb/usb_msc/: usbd_msc.c  usbd_msc.h
firmware/lucky65-fw/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/lucky65-fw/main/: CMakeLists.txt
firmware/lucky65-fw/main/ap/: ap.cpp
firmware/lucky65-fw/main/ap/modules/qmk/keyboards/baram/Lucky65/: config.h
firmware/lucky65-fw/main/ap/modules/qmk/keyboards/baram/Lucky65/json/: LUCKY65-ESP32-VIA.JSON  lucky65-esp32.json
firmware/lucky65-fw/main/common/hw/include/: cdc.h
firmware/lucky65-fw/main/hw/: hw.c  hw.h  hw_def.h
firmware/lucky65-fw/main/hw/driver/: keys.c  reset.c
firmware/lucky65-fw/main/hw/driver/usb/: cdc.c  usb.c
firmware/lucky65-fw/main/hw/driver/usb/usb_hid/: usbd_hid.c  usbd_hid.h
